added info about the idea

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/application.min.css">
     <title>Food Truck / Food Court</title>
 </head>
-<body class="d-flex flex-column">
-    <nav class="navbar navbar-dark bg-primary border-bottom border-light">
+<body class="d-flex flex-column bg-primary bg-gradient">
+    <nav class="navbar navbar-dark border-bottom border-light">
         <div class="container">
           <a class="navbar-brand mx-auto" href="#">
             <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-truck" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -19,14 +19,29 @@
           </a>
         </div>
     </nav>
-    <section class="bg-primary">
-        <div class="container p-5 d-flex flex-column justify-content-center align-items-center text-light h-500">
-            <h1 class="display-4 text-center">A Place for Makers, Tinkerers &amp; Students</h1>
-            <p class="lead">"Good actions give strength to ourselves &amp; inspire good actions in others" ~ Plato</p>
+    <section class="flex-grow-1 d-flex">
+        <div class="container p-5 d-flex flex-column justify-content-center align-items-center text-light">
+            <h1 class="display-4 text-center">Food Truck • Food Court</h1>
+            <p class="lead">A place to get outside &amp; experiance a rotation of great food.</p>
             <a href="#learn" class="btn btn-lg btn-outline-light">Learn More</a>
         </div>
     </section>
-    <footer class="bg-primary p-4 d-flex flex-column justify-content-center align-items-center mt-auto">
+    <section class="bg-light">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d303.59514219559554!2d-94.98587006388611!3d43.621114045653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1596552359960!5m2!1sen!2sus" width="100%" height="800" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </section>
+    <section id="#learn" class="bg-light p-5">
+        <div class="container d-flex flex-column justify-content-center align-items-center">
+            <h3>The Basic Idea</h3>
+            <p class="lead">An outdoor area with seating &amp; shade, where people can enjoy diverse foods offered by various food trucks.</p>
+            <ul class="lead ml-5">
+                <li>6 to 9 food trucks on the roster</li>
+                <li>3 food trucks scheduled on a given day</li>
+                <li>Enjoy cuisines not always available in Jackson</li>
+            </ul>
+            <p>An example of this in action is <a href="http://hubfoodpark.com/">The Hub</a> in Mankato.</p>
+        </div>
+    </section>
+    <footer class="p-4 d-flex flex-column justify-content-center align-items-center mt-auto">
         <span class="text-light">&copy; 2020 <a class="text-white" href="https://action-in-jackson.github.io/">Action in Jackson</a> | Covered with an <a class="text-white" href="https://github.com/Action-in-Jackson/maker-space/blob/master/LICENSE">MIT License</a> | Designed by <a class="text-white" href="https://jonweland.me">John Weland</a></span>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
